--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
+    "remix-auth": "^3.7.0",
+    "remix-auth-form": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
